Finish validating my files

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
   <meta charset="utf-8">
   <title>Modular nav</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <h1>Solar System</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Planets</a></li>
-        <li><a href="#">Moons</a></li>
-        <li><a href="#">Exploration</a></li>
-      </ul>
-    </nav>
+    <div class="grid grid-middle">
+      <h1 class="unit peta gutter">Solar System</h1>
+      <nav class="unit">
+        <ul class="text-right">
+          <li class="xs-1 s-1 m-1 l-1"><a href="#">Planets</a></li>
+          <li class="xs-1 s-1 m-1 l-1"><a href="#">Moons</a></li>
+          <li class="xs-1 s-1 m-1 l-1"><a href="#">Exploration</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
 </body>
